--- a/assets/css/font.css
+++ b/assets/css/font.css
@@ -1,9 +1,11 @@
 @font-face{
 	font-family:'Arial_Narrow_Bold';
-	src: url('../font/Arial_Narrow_Bold.ttf');
+	src: url('../fonts/Arial_Narrow_Bold.ttf');
 }
-
-@font-face{
-	font-family: 'HelveticaNeue-CondensedBold';
-	src: url('../font/HelveticaNeue-CondensedBold.ttf');
+@font-face {
+    font-family: 'arrow';
+    src: url('../fonts/arrow.woff2') format('woff2'),
+         url('../fonts/arrow.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
