--- a/assets/css/loadpage.css
+++ b/assets/css/loadpage.css
@@ -11,9 +11,6 @@ html{
 		font-size: 12px;
 	} 
 }
-html, body{
-	scroll-behavior: smooth;
-}
 body{
 	font-family: 'Arial_Narrow_Bold';
 	-webkit-font-smoothing:antialiased;
@@ -62,7 +59,6 @@ nav > div{
 main.scroll{
 	display: flex;
 	flex-direction: column;
-	gap:2rem;
 }
 
 figure{
@@ -71,7 +67,7 @@ figure{
 }
 img{
 	display: block;
-	margin:auto;
+	margin:1rem auto 1rem auto;
 	width: 100%;
 	height:100%;
 	object-fit: contain;
