--- a/assets/css/loadpage.css
+++ b/assets/css/loadpage.css
@@ -1,5 +1,5 @@
 html{
-	font-size: 16px;
+	font-size: 14px;
 	background-color: #fff;
 }
 @media all and (max-width: 48em) { 
@@ -15,11 +15,11 @@ html{
 body{
 	font-family: 'Arial_Narrow_Bold';
 	-webkit-font-smoothing:antialiased;
+	text-rendering: optimizeLegibility;
 	font-size: 1rem;
 	line-height: 1.2;
-	padding:1rem;
+	margin:1rem;
 	text-transform: uppercase;
-	background-color: transparent;
 /*	background-color: #fff;*/
 	color:#fff;
 }
@@ -31,7 +31,7 @@ body > header{
 	display: flex;
 	flex-direction: row;
 	flex-wrap: nowrap;
-	gap:0.75rem;
+	gap:0.25rem;
 	z-index:99999;
 }
 
@@ -95,22 +95,36 @@ ul{
 }
 
 summary:after, .arrDown:after{
-	content:'▽';
-	font-family: 'arrow';
+	content:'▼';
 	display: inline-block;
-	transform-origin: center;
-	transform: scaleX(0.7);
+	-webkit-text-stroke-width: 1px;
+	-webkit-text-stroke-color: #fff;
+	color:transparent;
+	margin: 0 0 0 0.2rem;
+	font-size: 12px;
+	vertical-align: 1px;
 }
 details[open] summary:after{
-	content:'△';
+	content:'▲';
+}
+details > ol{
+	margin-top: 1.2rem;
+	position: absolute;
+	margin-left: 1rem;
+}
+.arrRight{
+	font-family: Arial;
+	font-weight: bold;
 }
 .arrRight:after{
-	content:'▷';
-	font-family: 'arrow';
+	content:'►';
 	display: inline-block;
 	margin: 0 0.1rem 0 0.2rem;
-	transform-origin: 0 0.4rem;
-	transform: scaleY(0.75);
+	-webkit-text-stroke-width: 1px;
+	-webkit-text-stroke-color: #fff;
+	color:transparent;
+	font-size: 12px;
+	vertical-align: 1px;
 }
 sub{
 	font-size: 0.8rem;
@@ -128,4 +142,8 @@ sub{
 #description p{
 
 	position: absolute;
+}
+.normal{
+	font-family: Arial;
+	font-weight: bold;
 }
